--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -37,28 +37,61 @@
 
         <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left">
 
-          <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+          <form action="https://content.techpranee.com/api/leads-mahidharas" novalidate method="post" role="form" id="contactForm" class="php-email-form">
+            
             <div class="form-row">
+
               <div class="col-md-6 form-group">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                <input type="text" name="name" class="form-control" id="contactName" placeholder="Your Name" value=""/>
                 <div class="validate"></div>
               </div>
+
               <div class="col-md-6 form-group">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
+                <input type="email" class="form-control" value="" name="email" id="contactEmail" placeholder="Your Email" />
                 <div class="validate"></div>
               </div>
+
             </div>
+
+            <div class="form-row">
+
+              <div class="col-md-6 form-group">
+                <select id="productDropdown" class="form-control" >
+                  <option disabled selected>Products</option>                  
+                  <% products.forEach(prod => { %>
+                    <option value="/product/<%- prod.displayUrl %>"><%- prod.displayName %></option>
+                  <% }) %>
+                </select>
+                <div class="validate"></div>
+
+                <!-- <input type="text" name="compound name"  id="name" placeholder="Coumpound Name" data-rule="minlen:4" data-msg="Please enter valid Compound name" />
+                 -->
+              </div>
+
+              <div>
+
+                <input type="hidden" name="phone" value="null" id="contactPhone"/>
+
+                <input type="hidden" name="msg" id="contactMsg" value="submitting Contact Details" />
+      
+              </div>
+
+              <div class="col-md-6 form-group">
+                <input type="number" class="form-control" name="qty" id="contactQuantity" value="" placeholder="Quantity (Kg)" data-rule="number" data-msg="Please enter a valid quantity" min="0" step="0.100"
+                required/>
+                <div class="validate"></div>
+              </div>
+
+            </div>
+
             <div class="form-group">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+              <textarea class="form-control" name="address" rows="5" data-rule="required" id="contactAddress" data-msg="Please write something for us" placeholder="Address"></textarea>
               <div class="validate"></div>
             </div>
-            <div class="form-group">
-              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-              <div class="validate"></div>
-            </div>
+
             <div class="mb-3">
               <div class="loading">Loading</div>
-              <div class="error-message"></div>
+              <!-- <div class="error-message"></div> -->
               <div class="sent-message">Your message has been sent. Thank you!</div>
             </div>
             <div class="text-center"><button type="submit">Send Message</button></div>
