--- a/views/singleProduct.ejs
+++ b/views/singleProduct.ejs
@@ -144,7 +144,7 @@
                         </div>
                         <div class="modal-body">
                           <form class="needs-validation" novalidate id="msdsForm"
-                            action="https://content.techpranee.com/api/leads-mahidharas" method="post">
+                             method="post">
                             <div class="form-row">
                               <div class="col-md-9 mb-3">
                                 <input type="email" class="form-control" value placeholder="Email" id="msdsEmail" name="email"
@@ -157,7 +157,7 @@
 
                                 <input type="hidden" name="product" value="<%= product.displayName %>" id="msdsProduct" />
 
-                                <input type="hidden" name="qty" id="msdsQuantity" value="null" />
+                                <input type="hidden" name="qty" id="msdsQuantity" value="0" />
 
                                 <input type="hidden" name="phone" id="msdsPhone" value="null" />
 
