--- a/views/contactSites.ejs
+++ b/views/contactSites.ejs
@@ -34,7 +34,7 @@
             <p class="description">Plot No. 81, J.N.Pharma City
                 Thanam Village, Parawada Mandal
                 Visakhapatnam District - 531 021
-                Andhra Pradesh, INDIA <br>Phone : 91 8924 205053/54</p>
+                Andhra Pradesh, INDIA <br>Phone : +91 9963020666</p>
           </div>
         </div>
        
