--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -4,11 +4,13 @@
         <p>Leading Speciality & Fine chemicals Manufacturer
         </p>
         <div class="social-links">
-            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+            
+            <a href="https://www.facebook.com/mahidharachemicals" target="_blank" class="facebook"><i class="bx bxl-facebook"></i></a>
+
+            <a href="https://twitter.com/MahidharaChem" ><img class="x-twitter" target="_blank" src="assets/img/twitter-x-icon.png" alt=""></a>
+            <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+            <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+            <a href="https://www.linkedin.com/company/mahidhara-chemicals/about/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
         <div class="copyright">
             &copy; Copyright <strong><span>Mahidhara</span></strong>. All Rights Reserved
