--- a/views/head.ejs
+++ b/views/head.ejs
@@ -3,7 +3,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Mahidhara Chemicals Private Limited - Alkali Metals Manufacturer</title>
-  <meta content="" name="descriptison">
+  <meta content="" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -38,6 +38,8 @@
 
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BCBEH8369D"></script>
+
+<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script> 
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
