--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,10 +1,10 @@
-<header id="header" class="fixed-top d-flex align-items-center  header-transparent ">
+<header id="header" class="fixed-top d-flex align-items-center header-transparent">
   <div class="container d-flex align-items-center">
-
     <div class="logo mr-auto">
       <!-- <h1 class="text-light"><a href="/">Mahidhara Chemicals</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="/"><img src="assets/img/mahidhara.png" alt="" class="img-fluid"> <span class="text-light logoText">Mahidhara Chemicals</span></a>
+      <a href="/"><img src="assets/img/mahidhara.png" alt class="img-fluid" />
+        <span class="text-light logoText">Mahidhara Chemicals</span></a>
     </div>
 
     <nav class="nav-menu d-none d-lg-block">
@@ -15,14 +15,245 @@
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="#pricing">Pricing</a></li>
         <li><a href="#team">Team</a></li> -->
-        
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <li>
+          <div class="list-container">
+            <a href="/#products" class="product-button">Products <span
+                style="margin-top: 4px;">&nbsp;&#65088;</span></a>
+
+
+            <div class="centered-div" id="product-dropdown">
+
+              <div class="column">
+                  
+                    <h4>Main Products</h4><span>&nbsp;</span>
+                  
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "main-product").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+              </div>
+
+
+
+              <div class="column">
+                 
+                    <h4>Organometalic Products</h4><span>&nbsp;</span>
+                 
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "organometalic-product").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+              </div>
+
+
+              <div class="column">
+                  
+                    <h4>Metal Alkoxides</h4><span>&nbsp;</span>
+                  
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "metal-alkoxides").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+              </div>
+
+              <div class="column">
+                  
+                    <h4>Grignard Reagent</h4><span>&nbsp;</span>
+                  
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "grignard-reagent").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+               
+              </div>
+
+              <div class="column">
+                    <h4>Under Pipeline</h4><span>&nbsp;</span>
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "under-pipeline").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%-prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+              </div>
+
+              <div class="column">
+                    <h4>Other Products</h4><span>&nbsp;</span>
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "other-product").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+              </div>
+
+            </div>
+          </div>
+        </li>
+
+
+
+
+        <li>
+          <div class="nav-list-container">
+            
+            <a href="/#products" class="product-button">Products <span
+                style="margin-top: 4px;">&nbsp;&#65088;</span></a>
+
+
+            <div class="nav-centered-div" id="nav-product-dropdown">
+
+              <div class="nav-column">
+                <details>
+                  <summary>
+                    <h4>Main Product</h4><span>&nbsp;</span>
+                  </summary>
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "main-product").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+                </details>
+              </div>
+
+              <div class="nav-column">
+                <details >
+                  <summary>
+                    <h4>Organometalic Products</h4><span>&nbsp;</span>
+                  </summary>
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "organometalic-product").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+                </details>
+              </div>
+
+              <div class="nav-column">
+                <details >
+                  <summary>
+                    <h4>Metal Alkoxides</h4><span>&nbsp;</span>
+                  </summary>
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "metal-alkoxides").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+                </details>
+              </div>
+
+              <div class="nav-column">
+                <details >
+                  <summary>
+                    <h4>Grignard Reagent</h4><span>&nbsp;</span>
+                  </summary>
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "grignard-reagent").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+                </details>
+              </div>
+
+              <div class="nav-column">
+                <details >
+                  <summary>
+                    <h4>Under Pipeline</h4><span>&nbsp;</span>
+                  </summary>
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "under-pipeline").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%-prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+                </details>
+              </div>
+
+              <div class="nav-column">
+                <details>
+                  <summary>
+                    <h4>Other Products</h4><span>&nbsp;</span>
+                  </summary>
+                  <ul>
+                    <% products.filter(prod=> prod.category ===
+                      "other-product").forEach(prod => { %>
+                      <li>
+                        <a href="/product/<%- prod.displayUrl %>"><%- prod.displayName %></a>
+                      </li>
+                      <% }) %>
+                  </ul>
+                </details>
+              </div>
+              
+            </div>
+          </div>
+        </li>
+
+
+
+
+
+
+
+
+        <!-- 
         <li class="drop-down"><a href="/#products">Products</a>
+
+
           <ul>
             <% products.forEach(prod => { %>
               <li><a href="/product/<%- prod.displayUrl %> "><%- prod.displayName %> </a></li>
-            <% }) %>
-          
-            <!-- <li class="drop-down"><a href="#">Drop Down 2</a>
+            <% }) %> -->
+
+        <!-- <li class="drop-down"><a href="#">Drop Down 2</a>
               <ul>
                 <li><a href="#">Deep Drop Down 1</a></li>
                 <li><a href="#">Deep Drop Down 2</a></li>
@@ -31,15 +262,15 @@
                 <li><a href="#">Deep Drop Down 5</a></li>
               </ul>
             </li> -->
-            <!-- <li><a href="#">Drop Down 3</a></li>
+        <!-- <li><a href="#">Drop Down 3</a></li>
             <li><a href="#">Drop Down 4</a></li>
             <li><a href="#">Drop Down 5</a></li> -->
-          </ul>
-        </li>
-       
-        <li style="float: inline-end;"><a href="/contact">Contact</a></li>
-      </ul>
-    </nav><!-- .nav-menu -->
 
+        <!-- </ul> -->
+
+        <li><a href="/contact">Contact</a></li>
+      </ul>
+    </nav>
+    <!-- .nav-menu -->
   </div>
 </header>
