--- a/views/singleHead.ejs
+++ b/views/singleHead.ejs
@@ -3,7 +3,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
     <title><%= product.metaTitle %></title>
-    <meta content="<%= product.metaDescription %>" name="descriptison">
+    <meta content="<%= product.metaDescription %>" name="description">
     <meta content="<%= product.metaKeyword %>" name="keywords">
   
     <!-- Favicons -->
