--- a/views/header.ejs
+++ b/views/header.ejs
@@ -131,7 +131,7 @@
         <li>
           <div class="nav-list-container">
             
-            <a href="/#products" class="product-button">Products <span
+            <a class="product-button">Products <span
                 style="margin-top: 4px;">&nbsp;&#65088;</span></a>
 
 
@@ -140,7 +140,7 @@
               <div class="nav-column">
                 <details>
                   <summary>
-                    <h4>Main Product</h4><span>&nbsp;</span>
+                    <h4>Main Products</h4><span>&nbsp;</span>
                   </summary>
                   <ul>
                     <% products.filter(prod=> prod.category ===
