--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -13,7 +13,7 @@
             <div class="address">
               <i class="icofont-google-map"></i>
               <h4>Location:</h4>
-              <p>G-3 & G-4, Sai Peetambaram Residency, <br>
+              <p>G-3 & G-4, Sai Peethambaram Residency, <br>
                 East Marredpally,
                 Secunderabad, <br>
                 Telangana, INDIA - 500 026</p>
