--- a/views/team.ejs
+++ b/views/team.ejs
@@ -14,7 +14,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                 <div class="member" data-aos="zoom-in">
                     <div class="member-img">
-                        <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="team-1">
                         <div class="social">
                             <a href=""><i class="icofont-twitter"></i></a>
                             <a href=""><i class="icofont-facebook"></i></a>
@@ -36,7 +36,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                 <div class="member" data-aos="zoom-in" data-aos-delay="100">
                     <div class="member-img">
-                        <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="team-2">
                         <div class="social">
                             <a href=""><i class="icofont-twitter"></i></a>
                             <a href=""><i class="icofont-facebook"></i></a>
@@ -58,7 +58,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                 <div class="member" data-aos="zoom-in" data-aos-delay="200">
                     <div class="member-img">
-                        <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="team-3">
                         <div class="social">
                             <a href=""><i class="icofont-twitter"></i></a>
                             <a href=""><i class="icofont-facebook"></i></a>
@@ -78,7 +78,7 @@
             <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
                 <div class="member" data-aos="zoom-in" data-aos-delay="200">
                     <div class="member-img">
-                        <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="team-3">
                         <div class="social">
                             <a href=""><i class="icofont-twitter"></i></a>
                             <a href=""><i class="icofont-facebook"></i></a>
@@ -92,7 +92,7 @@
                         <p>An alumnus of the prestigious IIT Bombay, Aneesh co-founded Rutogo (acquired by Ixigo), and
                             is now a co-founder at AppyHigh. Savvy in tech, Aneesh’s strengths lie in operations and
                             product.
-                        </p> 
+                        </p>
                     </div>
                 </div>
             </div>
