--- a/views/contactUs.ejs
+++ b/views/contactUs.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
 <%- include('head'); -%>
-
+<link rel="canonical" href="https://mahidhara.com/contact" />
+</head>
 <body>
   <%- include('header', {products: products}); -%>
   <%- include('heroSection'); -%>
