--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
 <%- include('head', {products: products}); -%>
+<link rel="canonical" href="https://mahidhara.com" />
+</head>
 
 <body>
   <%- include('header', {products: products}); -%>
