--- a/views/privacy.ejs
+++ b/views/privacy.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
 <%- include('head'); -%>
+<link rel="canonical" href="https://mahidhara.com/privacy" />
+</head>
 
 <body>
     <%- include('nav'); -%>
